@@ -1,3 +1,6 @@
+2007-07-16 clean up some code in ticker.ScalarFormatter, use unicode to
+           render multiplication sign in offset ticklabel - DSD
+
 2007-07-16 fixed a formatting bug in ticker.ScalarFormatter's scientific 
            notation (10^0 was being rendered as 10 in some cases) - DSD
 
